# denn

projj/: CMakeLists.txt
projj/app/: main.cpp
projj/lib/: Configuration.h  SerialComm.h
projj/src/: SerialComm.cpp
